--- a/index.html
+++ b/index.html
@@ -132,11 +132,16 @@
             <!-- Card Content -->
             <div class="links-wrapper">
               <div class="links btn">
+                <img
+                  class="link-img"
+                  src="https://assets.donordrive.com/themes/stackup/img/calltoarms.png?v=202401171035"
+                  alt="StackUp"
+                />
                 <div class="link-item">
                   <h2>Donate to StackUp.org</h2>
                   <p>Answer the Call to Arms!</p>
                 </div>
-                <ul class="social">
+                <ul class="social social-m">
                   <li>
                     <a
                       class="ease-all"
@@ -148,11 +153,16 @@
                 </ul>
               </div>
               <div class="links btn">
+                <img
+                  class="link-img"
+                  src="https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-6/244942376_108625638259550_7378785433035534399_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=efb6e6&_nc_ohc=VZZxAUQb4PwAX8ah1VU&_nc_ht=scontent-dfw5-2.xx&oh=00_AfAhAx2VekMjfk49fZK6pXYcDMLCnWA--RUFUy-1qTMz8g&oe=65B82566"
+                  alt="SabersPro"
+                />
                 <div class="link-item">
                   <h2>SabersPro</h2>
                   <p>Use code: KERN for 10% off</p>
                 </div>
-                <ul class="social">
+                <ul class="social social-m">
                   <li>
                     <a class="ease-all" href="https://saberspro.com/">
                       <i class="fa fa-share"></i
@@ -161,11 +171,16 @@
                 </ul>
               </div>
               <div class="links btn">
+                <img
+                  class="link-img"
+                  src="https://yt3.googleusercontent.com/tIHAD7mn-fzNi4iXw1ta--4XgT43PzRBkp_0LPlPX66zdJSV9sOH2tE9jr1tbo9U18345Jj0nA=s900-c-k-c0x00ffffff-no-rj"
+                  alt="Rouge Energy"
+                />
                 <div class="link-item">
                   <h2>Rouge Energy</h2>
                   <p>Use code: KERN for 20% off</p>
                 </div>
-                <ul class="social">
+                <ul class="social social-m">
                   <li>
                     <a
                       class="ease-all"
@@ -177,11 +192,16 @@
                 </ul>
               </div>
               <div class="links btn">
+                <img
+                  class="link-img"
+                  src="https://assets.lego.com/logos/v4.5.0/brand-lego.svg"
+                  alt="LEGO Store"
+                />
                 <div class="link-item">
                   <h2>LEGO® Deals &amp; Promo Codes</h2>
                   <p>Official LEGO® Shop US</p>
                 </div>
-                <ul class="social">
+                <ul class="social social-m">
                   <li>
                     <a
                       class="ease-all"
