--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                       <a
                         class="ease-all"
                         href="https://stackup.donordrive.com/index.cfm?fuseaction=donorDrive.participant&participantID=8182"
+                        target="_blank"
                       >
                         <i class="fa fa-share"></i
                       ></a>
@@ -167,7 +168,11 @@
                   </div>
                   <ul class="social social-m">
                     <li>
-                      <a class="ease-all" href="https://saberspro.com/">
+                      <a
+                        class="ease-all"
+                        href="https://saberspro.com/"
+                        target="_blank"
+                      >
                         <i class="fa fa-share"></i
                       ></a>
                     </li>
@@ -188,6 +193,7 @@
                       <a
                         class="ease-all"
                         href="https://rogueenergy.com/?ref=cI4g4hlbzKdvN"
+                        target="_blank"
                       >
                         <i class="fa fa-share"></i
                       ></a>
@@ -209,6 +215,7 @@
                       <a
                         class="ease-all"
                         href="https://www.lego.com/en-us?CMP=AFC-AffiliateUS-lqoa4ETGx1o-3963521-1182088-3&consent-modal=show"
+                        target="_blank"
                       >
                         <i class="fa fa-share"></i
                       ></a>
