--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
       <!-- Header Title & Img -->
       <section>
-        <div class="text">
+        <div class="title">
           <h1>KERNOBI</h1>
         </div>
         <div class="profile-img">
@@ -57,7 +57,7 @@
 
       <!-- Social Media Links -->
       <section>
-        <ul class="social">
+        <ul class="social-btns">
           <li>
             <a
               class="ease-all"
@@ -144,7 +144,7 @@
                     <h2>Donate to StackUp.org</h2>
                     <p>Answer the Call to Arms!</p>
                   </div>
-                  <ul class="social social-m">
+                  <ul class="share-btn">
                     <li>
                       <a
                         class="ease-all"
@@ -166,7 +166,7 @@
                     <h2>SabersPro</h2>
                     <p>Use code: KERN for 10% off</p>
                   </div>
-                  <ul class="social social-m">
+                  <ul class="share-btn">
                     <li>
                       <a
                         class="ease-all"
@@ -188,7 +188,7 @@
                     <h2>Rouge Energy</h2>
                     <p>Use code: KERN for 20% off</p>
                   </div>
-                  <ul class="social social-m">
+                  <ul class="share-btn">
                     <li>
                       <a
                         class="ease-all"
@@ -210,7 +210,7 @@
                     <h2>LEGO® Deals &amp; Promo Codes</h2>
                     <p>Official LEGO® Shop US</p>
                   </div>
-                  <ul class="social social-m">
+                  <ul class="share-btn">
                     <li>
                       <a
                         class="ease-all"
