--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="./CSS/styles.css" />
     <link rel="stylesheet" href="./CSS/header.css" />
     <link rel="stylesheet" href="./CSS/links.css" />
+    <link rel="stylesheet" href="./CSS/footer.css" />
 
     <title>KernObi</title>
   </head>
@@ -227,6 +228,23 @@
           </div>
         </div>
       </section>
+
+      <!-- Footer -->
+      <footer>
+        <div class="footer-creator">
+          <img
+            src="brand-logo.png"
+            alt="Zephyrs Logo - Creator"
+            class="brand-logo"
+          />
+          <p class="footer-btn">
+            &copy; Created by
+            <a href="https://zephyr-portfolio.netlify.app/" target="_blank">
+              zephyrkensei <i class="fa-solid fa-code"></i>
+            </a>
+          </p>
+        </div>
+      </footer>
     </div>
 
     <script src="index.js"></script>
